# moodmo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dev.yaml  entrypoint.sh  example.env  local-pypy.yaml  local.yaml  manage.py  prod.yaml  pyproject.toml  requirements.dev.txt  requirements.txt  tailwind.config.js
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
activities/: admin.py  forms.py  models.py  schemas.py  tests.py  urls.py  views.py
activities/migrations/: 0001_initial.py
activities/tests/: test_forms.py  test_models.py  test_views.py
compose/dev/: Dockerfile
compose/local/: Dockerfile
compose/local-pypy/: Dockerfile
moodmo/: api.py  asgi.py  settings.py  urls.py  wsgi.py
moods/: admin.py  api.py  api_views.py  apps.py  forms.py  mixins.py  models.py  schemas.py  tests.py  urls.py  views.py
moods/migrations/: 0001_initial.py  0002_mood_last_modified_alter_mood_mood_alter_mood_note_and_more.py  0003_alter_mood_timestamp.py  0004_mood_search_vector.py  0005_mood_search_trigger.py  0006_mood_moods_mood_search__f63864_gin.py  0007_activity_mood_activities.py  0008_alter_activity_options.py  0009_alter_mood_activities_delete_activity.py  0009_alter_mood_options_remove_mood_timestamp_and_more.py  0010_alter_mood_mood.py  0010_remove_mood_timestamp_mood_date_mood_time.py
moods/templatetags/: custom_tags.py
moods/tests/: test_activities.py  test_forms.py  test_management_commands.py  test_moods.py  test_views.py  tests_models.py
moods/views/: __init__.py  activities_views.py  moods_views.py
pages/: forms.py  tests.py  urls.py  views.py
settings/: urls.py  views.py
static/css/: input.css
static/js/: custom.js
templates/: 404.html  500.html  _base.html  _base_form.html  _command_palette.html  _features.html  _footer.html  _hero.html  _mobile_menu.html  _nav.html  _primary_nav.html  _secondary_nav.html  home.html
templates/account/: _nav.html  delete.html  email.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/activities/: activity_create.html  activity_delete.html  activity_list.html  activity_update.html
templates/moods/: _mood_card.html  activity_create.html  activity_delete.html  activity_update.html  export.html  hx_mood_list.html  import.html  mood_create.html  mood_form.html  (+7 more)
utils/: mixins.py  testing.py
(+25 files in other folders)
