[tool.poetry]
name = "moodmo"
version = "0.1.0"
description = ""
authors = ["dnlzrgz <24715931+dnlzrgz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
environs = "^9.5.0"
psycopg = {extras = ["binary"], version = "^3.1.12"}
django-allauth = "^0.58.2"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.12.0"
pre-commit = "^3.5.0"
ruff = "^0.1.4"
django-debug-toolbar = "^4.2.0"
djhtml = "^3.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
